test/libsolidity/syntaxTests/emit/emit_empty.sol
contract C {
  function f() public {
    emit;
  }
}
// ----
// ParserError: (45-46): Expected event name or path.
